--- a/vcard/index.html
+++ b/vcard/index.html
@@ -410,7 +410,7 @@
             <div class="row">
               <!-- skill item-->
               <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
-                <div class="skills-list">
+                <div class="skills-list"><i class="fas fa-code"> </i>
                   <ul>
                     <li class="border-line-h"><i class="fab fa-html5"></i>
                       <div class="name">HTML5</div>
@@ -430,10 +430,10 @@
                         <div class="percentage" style="width:80%;"></div>
                       </div>
                     </li>
-                    <li><i class="devicon-jquery-plain colored"></i>
-                      <div class="name">Jquery</div>
+                    <li><i class="devicon-git-plain colored"></i>
+                      <div class="name">Git</div>
                       <div class="progress">
-                        <div class="percentage" style="width:85%;"></div>
+                        <div class="percentage" style="width:75%;"></div>
                       </div>
                     </li>
                   </ul>
@@ -442,29 +442,57 @@
               <!-- skill item-->
               <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
                 <div class="skills-list">
+                  <div class="skill-title border-line-h">Preprocessors</div>
                   <ul>
+                    <li class="border-line-h"><i class="devicon-sass-original colored"></i>
+                      <div class="name">SASS</div>
+                      <div class="progress">
+                        <div class="percentage" style="width:50%;"></div>
+                      </div>
+                    </li>
                     <li class="border-line-h">
-                      <div class="name">WordPress</div>
+                      <div class="name">Pug/Jade</div>
+                      <div class="progress">
+                        <div class="percentage" style="width:60%;"></div>
+                      </div>
+                    </li>
+                    <li class="border-line-h"><i class="devicon-less-plain-wordmark colored"></i>
+                      <div class="name">LESS</div>
+                      <div class="progress">
+                        <div class="percentage" style="width:35%;"></div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="clear"></div>
+              <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+                <div class="skills-list">
+                  <div class="skill-title border-line-h">Framework</div>
+                  <ul>
+                    <li class="border-line-h"><i class="devicon-bootstrap-plain colored"></i>
+                      <div class="name">Bootstrap</div>
+                      <div class="progress">
+                        <div class="percentage" style="width:80%;"></div>
+                      </div>
+                    </li>
+                    <li class="border-line-h"><i class="devicon-react-original colored"></i>
+                      <div class="name">React</div>
+                      <div class="progress">
+                        <div class="percentage" style="width:20%;"></div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+                <div class="skills-list">
+                  <div class="skill-title border-line-h">Libralies</div>
+                  <ul>
+                    <li><i class="devicon-jquery-plain colored"></i>
+                      <div class="name">Jquery</div>
                       <div class="progress">
                         <div class="percentage" style="width:85%;"></div>
-                      </div>
-                    </li>
-                    <li class="border-line-h">
-                      <div class="name">PHP / MYSQL</div>
-                      <div class="progress">
-                        <div class="percentage" style="width:65%;"></div>
-                      </div>
-                    </li>
-                    <li class="border-line-h">
-                      <div class="name">Angular / JavaScript</div>
-                      <div class="progress">
-                        <div class="percentage" style="width:75%;"></div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="name">HTML / CSS</div>
-                      <div class="progress">
-                        <div class="percentage" style="width:90%;"></div>
                       </div>
                     </li>
                   </ul>
