--- a/vcard/index.html
+++ b/vcard/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <!-- background-->
-  <!-- <div id="particles-js"> </div> -->
+  <div id="particles-js"> </div>
 
 
   <!-- Container-->
@@ -595,7 +595,7 @@
   <script src="boxicons.js"></script>
   <script src="particles.min.js"></script>
   <script src="scripts.js"></script>
-  <!-- <script>
+  <script>
     // Initialize and add the map
     function initMap() {
       // The location of Uluru
@@ -615,12 +615,10 @@
         map: map
       });
     }
-  </script> -->
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=
-  AIzaSyDJ3x-6vOD-WKd8RUEm4GpcKkCyUBN4mrk
-  &callback=initMap"></script> -->
-
-
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=
+AIzaSyDJ3x-6vOD-WKd8RUEm4GpcKkCyUBN4mrk
+&callback=initMap"></script>
 </body>
 
 </html>
