--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
             <span class="fab fa-linkedin"></span></a>
         </div>
         <!-- profile buttons-->
-        <div class="lnks"><a class="lnk" href="Prana Apsara Wijaya.pdf" download="CV"><span class="text">Download CV</span><span
-              class="ion ion-archive"></span></a><a class="lnk discover" href="#"><span class="text">Contact Me</span><i
-              class="fas fa-arrow-right"></i></a></div>
+        <div class="lnks">
+          </span></a><a class="lnk discover" href="#"><span class="text">Contact Me</span><i class="fas fa-arrow-right"></i></a></div>
       </div>
     </div>
     <!-- Card - About-->
